tests/baselines/reference/untypedModuleImport_noLocalImports.errors.txt
/a.ts(1,22): error TS6143: Module './foo' was resolved to '/foo.js', but '--allowJs' is not set.


==== /a.ts (1 errors) ====
    import * as foo from "./foo";
                         ~~~~~~~
!!! error TS6143: Module './foo' was resolved to '/foo.js', but '--allowJs' is not set.
    
==== /foo.js (0 errors) ====
    // This tests that untyped module imports don't happen with local imports.
    
    This file is not processed.
    